Implemented Multi-Threading / Fixed Syncing Percentage / New Account Popup